# agent-database-cli

./: .gitignore  AI_INSTALL.md  CHANGELOG.md  Cargo.toml  README.md  README_EN.md  README_ZH.md  SKILL.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: publish.yml  release.yml
ai/diagrams/: README.md
ai/diagrams/refactoring/: flow-cli-launch-latency.md
config/: docker-test.json
docker/mongodb/: init.js
docker/mysql/: init.sql
docker/oracle/: init.sql
docker/postgres/: init.sql
docs/: PERFORMANCE.md
npm/: package-template.json
rust/src/: config.rs  main.rs  output.rs  runtime.rs  secrets.rs  security.rs  ssh_tunnel.rs  types.rs
rust/src/adapters/: mod.rs  mongodb.rs  mysql.rs  oracle_driver.rs  oracle_sqlcl.rs  postgres.rs  redis_driver.rs
rust/src/daemon/: client.rs  config_manager.rs  connection_manager.rs  control.rs  mod.rs  paths.rs  server.rs
rust/src/utils/: masking.rs
scripts/: bench-launch.ps1  mcp_smoke.mjs
skills/agent-database-cli/: SKILL.md
src/: cli.ts  config.ts  connection-manager.ts  output.ts  runtime.ts  security.ts  ssh-tunnel.ts  types.ts
src/adapters/: base-sql.ts  factory.ts  mongodb.ts  mysql.ts  oracle-sqlcl.ts  oracle.ts  postgres.ts  redis.ts
src/daemon/: client.ts  control.ts  paths.ts  server.ts
src/types/: oracledb.d.ts
src/utils/: masking.ts
tests/integration/: mysql-postgres.test.ts  oracle.test.ts  redis-cluster-readonly.test.ts  redis-mongodb.test.ts
tests/unit/: config.test.ts  connection-manager.test.ts  daemon-config-manager.test.ts  daemon-paths.test.ts  factory.test.ts  masking.test.ts  mongodb.test.ts  oracle-sqlcl.test.ts  security.test.ts  ssh-tunnel.test.ts
