[package]
name = "agent-database-cli"
version = "0.2.22"
edition = "2021"
license = "MIT"
description = "统一数据库命令行工具，支持只读、黑名单和本地连接守护进程。"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
futures = "0.3"
mongodb = "3.3"
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"] }
once_cell = "1.20"
oracle = "0.6"
rand_core = { version = "0.6", features = ["getrandom"] }
redis = { version = "0.27", features = ["tokio-comp", "cluster", "cluster-async"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
tokio = { version = "1.41", features = ["full"] }
tokio-postgres = "0.7"
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }
russh = "0.45"
russh-keys = "0.45"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "agent-database-cli"
path = "rust/src/main.rs"

[target.'cfg(windows)'.dependencies]
sha1 = "0.10"
