[package]
name = "agent-database-cli"
version = "1.1.1"
edition = "2021"
license = "MIT"
description = "Unified database CLI with read-only mode and a command blocklist; each command opens a direct connection."

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
futures = "0.3"
mongodb = "3.3"
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"] }
once_cell = "1.20"
oracle = "0.6"
rand_core = { version = "0.6", features = ["getrandom"] }
redis = { version = "0.27", features = ["tokio-comp", "cluster", "cluster-async"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
tokio = { version = "1.41", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1", "with-time-0_3"] }
tokio-postgres-rustls = "0.13"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
rust_decimal = { version = "1", features = ["db-tokio-postgres"] }
time = { version = "0.3", features = ["formatting"] }
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }
russh = "0.45"
russh-keys = "0.45"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "agent-database-cli"
path = "rust/src/main.rs"

[target.'cfg(windows)'.dependencies]
sha1 = "0.10"
